Show all projects

--- a/index.html
+++ b/index.html
@@ -10083,10 +10083,10 @@
 
 					// Project list related operations
 					// todo : remove this hard coded stuff later on
-					let projectDetails1 = floGlobals.appObjects.RIBC.projectDetails
-					let projectDetails = {}
+					let projectDetails = floGlobals.appObjects.RIBC.projectDetails
+					/*let projectDetails = {}
 					projectDetails["2020_project_4"] = projectDetails1["2020_project_4"]
-					delete(projectDetails1)
+					delete(projectDetails1) */
 					let projectDetailsKeys = Object.keys(projectDetails)
 					projectDetailsKeys = projectDetailsKeys.reverse()
 
