--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 
 			//Required for blockchain API operators
 			apiURL: {
-				FLO: ['https://explorer.mediciland.com/', 'https://flosight.duckdns.org/',
-					'http://livenet-explorer.floexperiments.com/'
-				],
+				FLO: ['https://explorer.mediciland.com/', 'https://flosight1.duckdns.org/'],
 				FLO_TEST: ['https://testnet-flosight.duckdns.org/', 'https://testnet.flocha.in/']
 			},
 			adminID: "F8cnZpcc3sc98DTTrPMr6ZtRon7Vk4fm1Y",
