--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 			//Required for blockchain API operators
 			apiURL: {
-				FLO: ['https://livenet.flocha.in/'],
+				FLO: ['https://livenet.flocha.in/','https://flosight.duckdns.org/'],
 				FLO_TEST: ['https://testnet-flosight.duckdns.org/', 'https://testnet.flocha.in/']
 			},
 			adminID: "F8cnZpcc3sc98DTTrPMr6ZtRon7Vk4fm1Y",
